--- a/10.2.0/angular/src/app/doctors/patient/patient.component.html
+++ b/10.2.0/angular/src/app/doctors/patient/patient.component.html
@@ -6,7 +6,7 @@
                     <h1>Patients</h1>
                 </div>
                 <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createPrescription()">
+                    <a href="javascript:;" class="btn bg-blue" (click)="showCreatePatientDialog()">
                         <i class="fa fa-plus-square"></i>
                         {{ 'Create' | localize }}
                     </a>
@@ -98,10 +98,6 @@
                             [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th style="min-width: 100px" pSortableColumn="userName">
-                                        {{ 'UserName' | localize }}
-                                        <p-sortIcon field="userName"></p-sortIcon>
-                                    </th>
                                     <th style="min-width: 150px" pSortableColumn="name">
                                         {{ 'FullName' | localize }}
                                         <p-sortIcon field="name"></p-sortIcon>
@@ -110,16 +106,11 @@
                                         {{ 'EmailAddress' | localize }}
                                         <p-sortIcon field="emailAddress"></p-sortIcon>
                                     </th>
-                                    <th style="min-width: 30px" pSortableColumn="bloodGroup">
-                                        {{ 'BloodGroup' | localize }}
-                                        <p-sortIcon field="bloodGroup"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 150px" pSortableColumn="insuranceProvider">
-                                        {{ 'Insurance Provider' | localize }}
-                                        <p-sortIcon field="insuranceProvider"></p-sortIcon>
+                                    <th>
+                                        Age/Gender
                                     </th>
                                     <th style="min-width: 80px">
-                                        {{ 'Doctor' | localize }}
+                                        Assigned Nurse
                                     </th>
                                     <th style="min-width: 50px">
                                         {{ 'IsActive' | localize }}
@@ -134,11 +125,6 @@
                                 <tr>
                                     <td>
                                         <span>
-                                            {{ record.userName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
                                             {{ record.fullName }}
                                         </span>
                                     </td>
@@ -149,17 +135,12 @@
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.bloodGroup }}
+                                            {{calculateAge(record.dateOfBirth)}} • {{record.gender}}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.insuranceProvider }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.doctors }}
+                                            {{ record.nurseName }}
                                         </span>
                                     </td>
                                     <td>
@@ -173,7 +154,10 @@
                                         </button>
                                         <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                                             <ul class="custom-overlay-menu">
-                                                <li (click)="editAppoinment(selectedRecord)">   
+                                                <li (click)="showPatientDetailsDialog()">
+                                                    <i class="pi pi-eye"></i> View
+                                                </li>
+                                                <li (click)="showCreatePatientDialog(selectedRecord.id)">
                                                     <i class="pi pi-pencil"></i> Edit
                                                 </li>
                                                 <li (click)="delete(selectedRecord)">
