--- a/10.2.0/angular/src/app/doctors/patient/patient.component.html
+++ b/10.2.0/angular/src/app/doctors/patient/patient.component.html
@@ -154,7 +154,7 @@
                                         </button>
                                         <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                                             <ul class="custom-overlay-menu">
-                                                <li (click)="showPatientDetailsDialog()">
+                                                <li (click)="showPatientDetailsDialog(selectedRecord.id)">
                                                     <i class="pi pi-eye"></i> View
                                                 </li>
                                                 <li (click)="showCreatePatientDialog(selectedRecord.id)">
