--- a/10.2.0/angular/src/app/patient/patient-profile/patient-profile.component.html
+++ b/10.2.0/angular/src/app/patient/patient-profile/patient-profile.component.html
@@ -1,15 +1,16 @@
 <div>
     <abp-modal-header title="Patient Details" (onCloseClick)="bsModalRef.hide()">
     </abp-modal-header>
-    <div class="modal-body">
+    <div class="modal-body" *ngIf="patientDetailsAndMedicalHistory">
         <div class="card p-3">
             <div class="Patient-details text-center">
                 <img class="rounded-circle" src="https://medixpro.vercel.app/colorful-abstract-shapes.png" />
-                <h2 class="font-patient-name">John Smith</h2>
-                <p class="text-muted-foreground">45 years • Male</p>
+                <h2 class="font-patient-name">{{patientDetailsAndMedicalHistory.fullName}}</h2>
+                <p class="text-muted-foreground">{{calculateAgeDisplay(patientDetailsAndMedicalHistory.dateOfBirth)}} •
+                    {{patientDetailsAndMedicalHistory.gender}}</p>
                 <div class="d-flex justify-content-center align-items-center">
-                    <p class="patient-status pl-2 pr-2">Active</p>
-                    <p class="patient-blood-group ml-2 pl-2 pr-2">O+</p>
+                    <p class="patient-status pl-2 pr-2" *ngIf="patientDetailsAndMedicalHistory.isAdmitted">Active</p>
+                    <p class="patient-blood-group ml-2 pl-2 pr-2">{{patientDetailsAndMedicalHistory.bloodGroup}}</p>
                 </div>
             </div>
             <div class="Patient-info">
@@ -26,19 +27,19 @@
                                 </thead>
                                 <tr>
                                     <th>Date of Birth</th>
-                                    <td> 1978-05-15</td>
+                                    <td> {{patientDetailsAndMedicalHistory.dateOfBirth | date}}</td>
                                 </tr>
                                 <tr>
                                     <th>Phone</th>
-                                    <td>+1 (555) 123-4567</td>
+                                    <td>{{patientDetailsAndMedicalHistory.phoneNumber}}</td>
                                 </tr>
                                 <tr>
                                     <th>Email</th>
-                                    <td>john.smithexample.com</td>
+                                    <td>{{patientDetailsAndMedicalHistory.emailAddress}}</td>
                                 </tr>
                                 <tr>
                                     <th>Address</th>
-                                    <td>123 Main Street, Apt 4B, New York, NY 10001</td>
+                                    <td>{{patientDetailsAndMedicalHistory.address}}</td>
                                 </tr>
                             </table>
                         </div>
@@ -55,19 +56,19 @@
                                 </thead>
                                 <tr>
                                     <th>Blood Type</th>
-                                    <td>O+</td>
-                                </tr>
-                                <tr>
-                                    <th>Allergies</th>
-                                    <td>Penicillin, Peanuts</td>
+                                    <td>{{patientDetailsAndMedicalHistory.bloodGroup}}</td>
                                 </tr>
                                 <tr>
                                     <th>Conditions</th>
                                     <td>Hypertension, Type 2 Diabetes</td>
                                 </tr>
                                 <tr>
+                                    <th>Primary Nurse</th>
+                                    <td>{{patientDetailsAndMedicalHistory.assignedNurseName}}</td>
+                                </tr>
+                                <tr>
                                     <th>Primary Doctor</th>
-                                    <td>Dr. Sarah Johnson</td>
+                                    <td>{{patientDetailsAndMedicalHistory.assignedDoctorName}}</td>
                                 </tr>
                             </table>
                         </div>
@@ -86,11 +87,11 @@
                                 </thead>
                                 <tr>
                                     <th>Provider</th>
-                                    <td>Blue Cross Blue Shield</td>
+                                    <td>{{patientDetailsAndMedicalHistory.insuranceProvider}}</td>
                                 </tr>
                                 <tr>
                                     <th>Policy Number</th>
-                                    <td>BCBS123456789</td>
+                                    <td>{{patientDetailsAndMedicalHistory.insurancePolicyNumber}}</td>
                                 </tr>
                             </table>
                         </div>
@@ -107,7 +108,7 @@
                                 </thead>
                                 <tr>
                                     <th>Name</th>
-                                    <td>Mary Smith</td>
+                                    <td>{{patientDetailsAndMedicalHistory.emergencyContactName}}</td>
                                 </tr>
                                 <tr>
                                     <th>Relationship</th>
@@ -115,7 +116,7 @@
                                 </tr>
                                 <tr>
                                     <th>Phone</th>
-                                    <td>+1 (555) 987-6543</td>
+                                    <td>{{patientDetailsAndMedicalHistory.emergencyContactNumber}}</td>
                                 </tr>
                             </table>
                         </div>
@@ -157,8 +158,11 @@
                                     <div class="card p-3">
                                         <h6><b>Blood Pressure</b></h6>
                                         <div class="mt-3">
-                                            <p class="m-0">135/85</p>
-                                            <small>Last checked: Apr 5, 2024</small>
+                                            <p class="m-0">
+                                                {{patientDetailsAndMedicalHistory.patientVitalsDetails.bloodPressure}}
+                                            </p>
+                                            <small>{{patientDetailsAndMedicalHistory.patientVitalsDetails.dateRecorded
+                                                |date}}</small>
                                             <p-progressbar />
                                             <span>Slightly elevated</span>
                                         </div>
@@ -166,10 +170,12 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="card p-3">
-                                        <h6><b>Blood Glucose</b></h6>
+                                        <h6><b>Heart Rate</b></h6>
                                         <div class="mt-3">
-                                            <p class="m-0">125 mg/dL</p>
-                                            <small>Last checked: Apr 5, 2024</small>
+                                            <p class="m-0">
+                                                {{patientDetailsAndMedicalHistory.patientVitalsDetails.heartRate}}</p>
+                                            <small>{{patientDetailsAndMedicalHistory.patientVitalsDetails.dateRecorded
+                                                |date}}</small>
                                             <p-progressbar />
                                             <span>Above normal</span>
                                         </div>
@@ -179,8 +185,10 @@
                                     <div class="card p-3">
                                         <h6><b>Weight</b></h6>
                                         <div class="mt-3">
-                                            <p class="m-0">82 kg</p>
-                                            <small>Last checked: Apr 5, 2024</small>
+                                            <p class="m-0">
+                                                {{patientDetailsAndMedicalHistory.patientVitalsDetails.weight}} kg</p>
+                                            <small>{{patientDetailsAndMedicalHistory.patientVitalsDetails.dateRecorded
+                                                |date}}</small>
                                             <p-progressbar />
                                             <span>Stable</span>
                                         </div>
@@ -202,26 +210,24 @@
                                             <th>Doctor</th>
                                             <th>Status</th>
                                             <th>Notes</th>
-                                            <th>Actions</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody
+                                        *ngFor="let itm of patientDetailsAndMedicalHistory.patientAppointmentHistory">
                                         <tr>
                                             <td>
-                                                <p class="m-0">2023-07-15</p>
-                                                <p class="m-0">10:00 AM</p>
+                                                <p class="m-0">{{itm.appointmentDate |date}}</p>
+                                                <p class="m-0">{{itm.startTime}}</p>
                                             </td>
                                             <td>
-                                                Follow-up
+                                                <span *ngIf="itm.isFollowUp">Follow-up</span>
                                             </td>
-                                            <td>Dr. Michael Chen</td>
+                                            <td>{{itm.doctorName}}</td>
                                             <td>
-                                                <span class="appoinment-status">Scheduled</span>
+                                                <p-chip [label]="getStatusLabel(itm.status)"
+                                                    [class]="getStatusClass(itm.status)" />
                                             </td>
-                                            <td>Discussed medication adju...</td>
-                                            <td class="text-center">
-                                                <span class="pi pi-ellipsis-h"></span>
-                                            </td>
+                                            <td>{{itm.reasonForVisit}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -236,27 +242,23 @@
                                 <table class="table">
                                     <thead>
                                         <tr>
-                                            <th>Medication</th>
-                                            <th>Dosage & Frequency</th>
-                                            <th>Date Range</th>
+                                            <th>Medication ,Dosage & Frequency</th>
                                             <th>Doctor</th>
                                             <th>Status</th>
                                             <th>Actions</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody *ngFor="let group of groupedPrescriptions">
                                         <tr>
                                             <td>
-                                                <p class="m-0">Lisinopril</p>
+                                                <li *ngFor="let item of group.items">
+                                                    {{ item.medicineName }} - {{ item.dosage }}, {{ item.frequency }}
+                                                </li>
                                             </td>
                                             <td>
-                                                10mg, Once daily
+                                                {{ group.doctorName }}
                                             </td>
-                                            <td>
-                                                <p class="m-0">2023-07-15</p>
-                                                <p class="m-0">to 2023-10-15</p>
-                                            </td>
-                                            <td>Dr. Sarah Johnson</td>
+                                            <td>{{ group.doctorName }}</td>
                                             <td>
                                                 <span class="appoinment-status">Active</span>
                                             </td>
