--- a/10.2.0/angular/src/app/pharmacist/pharmacist-inventory/pharmacist-inventory.component.html
+++ b/10.2.0/angular/src/app/pharmacist/pharmacist-inventory/pharmacist-inventory.component.html
@@ -1,1 +1,227 @@
-<p>pharmacist-inventory works!</p>
+<div [@routerTransition]>
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6">
+                    <h1>Medicine Inventory</h1>
+                </div>
+                <div class="col-6 text-right">
+                    <a href="javascript:;" class="btn bg-blue" (click)="addNewMedicine()">
+                        <i class="fa fa-plus-square"></i>
+                        {{ 'Create' | localize }}
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content px-2 pb-3">
+        <div class="container-fluid">
+            <div class="card table-wrapper">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-md-6">&emsp;</div>
+                        <div class="col-md-6">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <button type="button" class="btn bg-blue" (click)="list()">
+                                        <i class="fas fa-search"></i>
+                                    </button>
+                                </div>
+                                <input type="text" class="form-control" name="keyword"
+                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
+                                    (keyup.enter)="list()" />
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-default"
+                                        (click)="advancedFiltersVisible = !advancedFiltersVisible">
+                                        <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
+                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    @if (advancedFiltersVisible) {
+                    <div class="card mb-0 mt-1">
+                        <div class="card-body">
+                            <form class="form-horizontal">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="form-group row">
+                                            <label class="col-md-4 col-form-label">Min Stock</label>
+                                            <div class="col-md-8">
+                                                <input type="number" class="form-control" [(ngModel)]="minStock"
+                                                    name="minStock">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group row">
+                                            <label class="col-md-4 col-form-label">Stock</label>
+                                            <div class="col-md-8">
+                                                <input type="number" class="form-control" [(ngModel)]="maxStock"
+                                                    name="maxStock">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group row">
+                                            <label class="col-md-4 col-form-label">Availability</label>
+                                            <div class="col-md-8">
+                                                <select class="form-control" [(ngModel)]="isAvailable" name="isAvailable">
+                                                    <option [ngValue]="undefined">All</option>
+                                                    <option [ngValue]="true">Available</option>
+                                                    <option [ngValue]="false">Not Available</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <div class="row mt-2">
+                                    <div class="col-md-12">
+                                        <div class="form-group row">
+                                            <label class="col-md-2 col-form-label">Expiry Date Range</label>
+                                            <div class="col-md-10">
+                                                <p-calendar [(ngModel)]="dateRange" name="dateRange"
+                                                    selectionMode="range" dateFormat="yy-mm-dd" class="w-100"
+                                                    [showIcon]="true" placeholder="Select date range">
+                                                </p-calendar>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> -->
+                            </form>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn bg-blue" (click)="list()">
+                                {{ 'Search' | localize }}
+                            </button>
+                            <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
+                                {{ 'Clear' | localize }}
+                            </button>
+                        </div>
+                    </div>
+                    }
+                </div>
+                <div class="card-body table-responsive table-striped table-bordered">
+                    <!--<Primeng-TurboTable-Start>-->
+                    <div class="primeng-datatable-container">
+                        <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)"
+                            [value]="primengTableHelper.records"
+                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+                            [tableStyle]="{ 'min-width': '50rem' }">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th style="min-width: 150px" pSortableColumn="medicineName">
+                                        Name<p-sortIcon field="medicineName"></p-sortIcon>
+                                    </th>
+                                    <th style="min-width: 150px">
+                                        Price
+                                    </th>
+                                    <th style="min-width: 150px">
+                                        Expiry Status 
+                                    </th>
+                                    <th style="min-width: 70px">
+                                        InStock 
+                                    </th>
+                                    <th style="min-width: 70px">
+                                        Status
+                                    </th>
+                                    <th style="min-width: 100px">
+                                        Unit(ml/mg)
+                                    </th>
+                                    <th style="min-width: 130px">
+                                        {{ 'Actions' | localize }}
+                                    </th>
+                                </tr>
+                            </ng-template>
+
+                            <ng-template pTemplate="body" let-record="$implicit">
+                                <tr>
+                                    <td>
+                                        <span>
+                                            {{ record.medicineName }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span>
+                                            ₹ {{ record.sellingPrice }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span class="expiry-date" [class.expired]="record.expiryStatus === 'Expired'"
+                                            [class.near-expiry]="record.expiryStatus === 'Expires Soon'"
+                                            [class.valid]="record.expiryStatus === 'Valid'">
+                                            {{ record.expiryDate | date: 'dd/MM/yyyy' }}
+                                            <small>({{ record.expiryStatus }})</small>
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span>
+                                            {{ record.stock }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span [class.stock-status]="true"
+                                            [class.in-stock]="record.stockStatus === 'In Stock'"
+                                            [class.low-stock]="record.stockStatus === 'Low Stock'"
+                                            [class.out-of-stock]="record.stockStatus === 'Out of Stock'">
+                                            {{ record.stockStatus }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span>
+                                            {{ record.unit }}
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
+                                            (click)="rowMenu.toggle($event); selectedRecord = record">
+                                        </button>
+                                        <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
+                                            <ul class="custom-overlay-menu">
+                                                <li (click)="editNewMedicine(selectedRecord)">
+                                                    <i class="pi pi-pencil"></i> Edit
+                                                </li>
+                                                <li (click)="delete(selectedRecord)">
+                                                    <i class="pi pi-trash"></i> Delete
+                                                </li>
+                                            </ul>
+                                        </p-overlayPanel>
+                                    </td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                            {{ 'NoData' | localize }}
+                        </div>
+                        <div class="ui-table-footer"></div>
+                    </div>
+                    <!--<Primeng-TurboTable-End>-->
+                </div>
+                <div class="card-footer table-card-footer bg-white border-top">
+                    <div class="row">
+                        <div class="col-sm-4 col-12 text-sm-left text-center">
+                            <button class="btn btn-secondary" (click)="refresh()">
+                                <i class="fas fa-redo-alt"></i>
+                            </button>
+                        </div>
+                        <div class="col-sm-8 col-12">
+                            <div class="float-sm-right m-auto">
+                                <div class="primeng-paging-container">
+                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                                        (onPageChange)="list($event)"
+                                        [totalRecords]="primengTableHelper.totalRecordsCount"
+                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
+                                            'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
+                                        "></p-paginator>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
