--- a/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
+++ b/10.2.0/angular/src/app/billing-staff/invoices/invoices.component.html
@@ -6,7 +6,7 @@
                     <h1>Invoice</h1>
                 </div>
                 <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createPrescription()">
+                    <a href="javascript:;" class="btn bg-blue" (click)="createInvoice()">
                         <i class="fa fa-plus-square"></i>
                         {{ 'Create' | localize }}
                     </a>
@@ -134,12 +134,12 @@
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.paymentStatus }}
+                                            {{ getStatusString(record.status) }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.paymentMethod }}
+                                            {{ getPaymentMethodString(record.paymentMethod) }}
                                         </span>
                                     </td>
                                     <td>
