--- a/10.2.0/angular/src/app/pharmacist/add-medicine/add-medicine.component.html
+++ b/10.2.0/angular/src/app/pharmacist/add-medicine/add-medicine.component.html
@@ -53,12 +53,12 @@
             <div class="col-md-6 d-flex flex-column">
                 <label for="stock">Current Stock</label>
                 <p-inputNumber [(ngModel)]="inventory.stock" name="stock" placeholder="Enter quantity" class="w-100"
-                    required />
+                    [min]="1" [max]="10000" required />
             </div>
             <div class="col-md-6 d-flex flex-column">
                 <label for="minStock">Minimum Stock</label>
                 <p-inputNumber [(ngModel)]="inventory.minStock" name="minStock" placeholder="Enter minimum stock"
-                    class="w-100" required />
+                    [min]="1" [max]="10000" class="w-100" required />
             </div>
         </div>
 
